# oocode

./: .gitignore  LICENSE  README.md  asset_register.csv  config.py  install.sh  oocode  oocode.json.example  oocode.py  pyproject.toml  requirements.txt
agent/: branches.py  chatlog.py  context.py  embeddings.py  keybindings.py  logger.py  loop.py  lsp_client.py  mcp_client.py  memory.py  runtime.py  scheduler.py  session.py  subagent.py  tasks.py  workspace_rag.py
doc/: 01_installation.md  02_configuration.md  03_commands.md  04_tools.md  05_memory.md  06_context.md  07_plugins.md  08_skills.md  09_searxng.md  10_logging.md  11_architecture.md  12_subagents.md  13_git_plugin.md  14_diff_plugin.md  15_system_assistant.md
mcp_servers/: home_office_assistant.py  iot_assistant.py  oocode_assistant.py  security_assistant.py  system_assistant.py
plugins/: changelog.py  clipboard.py  embeddings_search.py  lsp.py  manager.py  searxng.py  test_runner.py  todo.py  tree_sitter.py  vault.py
skills/: converters.py  manager.py  snippets.py
tests/: conftest.py  run_tests.py  test_01_core_tools.py  test_02_filesystem_tools.py  test_03_file_rw_tools.py  test_04_git_tools.py  test_05_search_tools.py  test_06_python_exec_tools.py  test_07_lint_tools.py  test_08_archive_tools.py  test_09_agent_modules.py  test_10_mcp_tool_names.py  test_11_build_tools.py  test_12_precheck_tool.py  test_13_memory_tools.py  test_14_mcp_misc_tools.py  test_15_mcp_edit_tools.py  test_16_mcp_prompts_resources.py  test_17_workflow.py  test_18_permissions.py  test_19_bash_antipatterns.py  (+44 more)
tools/: bash.py  (+10 more)
(+14 files in other folders)
