[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oocode"
version = "1.1.0"
description = "OOCode — Asistente de programación local con Ollama"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.4.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "ddgs>=9.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyperclip>=1.8.0",
]

[project.scripts]
oocode = "oocode:main"

[tool.setuptools]
py-modules = ["oocode", "config"]
packages   = ["agent", "tools", "ui", "plugins", "skills", "workspace"]
